src/kioslave/kioslave.cpp
@@ -55,7 +55,7 @@ extern "C" KIO::AuthInfo *_kioslave_init_kio()
 int main(int argc, char **argv)
 {
     if (argc < 5) {
-        fprintf(stderr, "Usage: kioslave <slave-lib> <protocol> <klauncher-socket> <app-socket>\n\nThis program is part of KDE.\n");
+        fprintf(stderr, "Usage: kioslave5 <slave-lib> <protocol> <klauncher-socket> <app-socket>\n\nThis program is part of KDE.\n");
         return 1;
     }
 #ifndef _WIN32_WCE
@@ -124,9 +124,9 @@ int main(int argc, char **argv)
 
     int (*func)(int, char *[]) = (int (*)(int, char *[])) sym;
 
-    // We need argv[0] to remain /path/to/kioslave
+    // We need argv[0] to remain /path/to/kioslave5
     // so that applicationDirPath() is correct on non-Linux (no /proc)
-    // and we want to skip argv[1] so the kioslave exe is transparent to kdemain.
+    // and we want to skip argv[1] so the kioslave5 exe is transparent to kdemain.
     const int newArgc = argc - 1;
     QVarLengthArray<char*, 5> newArgv(newArgc);
     newArgv[0] = argv[0];
